--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 **/lib/**
 **/lib_sources/**
 **/.settings/**
-**/ApplicationResources**.*
+pos/source_code/ApplicationResources.properties
+pos/source_code/ApplicationResources.properties.localhost
 **/.DS_Store
 **/*.tlp
 **/source_code/scripts_db/**
